[package]
name = "tex2typst-rs"
version = "0.3.10"
description = "Converts LaTeX math to Typst math"
authors = ["Jamie <bdmundxyang@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Unpredictability/tex2typst-rs"
categories = ["text-processing", "parsing", "mathematics"]
keywords = ["latex", "tex", "math", "typst", "converting"]
readme = "README.md"
edition = "2021"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
regex = "1.11.1"
